fix margin on mobile

--- a/css/mqueries.less
+++ b/css/mqueries.less
@@ -29,7 +29,7 @@
   }
 
   #sidebar {
-    margin-top: 0 !important;
+    margin-top: 2em !important;
   }
 
 }
